--- a/home/index.html
+++ b/home/index.html
@@ -41,8 +41,10 @@
             Read more about this environmental and social cause
           </a>
         </article>
-        <p class="hashtag1">
-          # STOP CLIMATE CHANGE
+        <p class="hashtag-white hashtag-desktop-view">
+          # STOP <br>
+          CLIMATE <br>
+          CHANGE <br>
         </p>
       </div>
       <div id="intro-div2">
@@ -75,8 +77,10 @@
 
     <section id="intro">
       <div id="intro-div1">
-        <p class="hashtag1">
-          # STOP CLIMATE CHANGE
+        <p class="hashtag-white hashtag-mobile-tab" id="intro-div1-stop">
+          # STOP <br>
+          CLIMATE <br>
+          CHANGE <br>
         </p>
         <article>
           <h4 class="heading">
@@ -159,8 +163,8 @@
     </section>
 
     <section id="take-action-today">
-      <p class="hashtag1" id="climate-change">CLIMATE CHANGE IS A HUNGER ISSUE</p>
-      <a href="#" class="noTextDecoration read-more">Take action today</a>
+      <p class="hashtag-white hashtag-mobile-tab hashtag-desktop-view" id="climate-change">CLIMATE CHANGE IS A HUNGER ISSUE</p>
+      <a href="#" class="noTextDecoration read-more font-size-18px" id="take-action-today-link">Take action today</a>
       <div id="did-you-know-container">
         <h4 class="whiteTextBlueBack">DID YOU KNOW?</h4>
         <div class="child-grid-container">
@@ -228,7 +232,7 @@
       <div class="tab-view-news-outerdiv">
         <img src="./images/home/tree-planting.png" alt="">
         <div class="tab-view-outerdiv-div">
-          <p class="heading2 blueTextWhiteBack">EVENT</p>
+          <p class=" margin-top-zero blueTextWhiteBack">EVENT</p>
           <h3 class="textAlign whiteText">Earth Day 2018 community tree planting event</h3>
           <p class="textAlign whiteText text14px tab-view-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Eius atque reiciendis magnam minus harum tempore vero alias,
@@ -239,7 +243,7 @@
       </div>
       <div class="tab-view-news-outerdiv">
         <div class="tab-view-outerdiv-div">
-          <p class="blueTextWhiteBack" id="latest-news-p">LATEST NEWS</p>
+          <p class=" margin-top-zero blueTextWhiteBack" id="latest-news-p">LATEST NEWS</p>
           <h3 class="textAlign whiteText">Earth Day 2018 community tree planting event</h3>
           <p class="textAlign whiteText tab-view-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Eius atque reiciendis magnam minus harum tempore vero alias,
@@ -253,7 +257,7 @@
 
 
     <section id="event-latest-news" class="structure">
-      <h2 class="hashtag1 textAlign" id="event-latest-news-h">LET'S TAKE ACTION NOW TO SAVE THE FUTURE</h2>
+      <h2 class="hashtag-white hashtag-mobile-tag textAlign" id="event-latest-news-h">LET'S TAKE ACTION NOW TO SAVE THE FUTURE</h2>
       <div id="event" class="element-structure-flex">
         <p class="heading2 blueTextWhiteBack">EVENT</p>
         <img src="./images/home/tree-planting.png" class="img2" alt="">
@@ -322,18 +326,19 @@
         </ul>
       </div>
     </div>
-    <h2 class="hashtag1" id="footer-hashtag">
+    <h2 class="hashtag-blue hashtag-mobile-tab" id="footer-hashtag">
       # STOP CLIMATE CHANGE
     </h2>
   </footer>
 
   <footer id="tab-view-footer">
     <h3 class="header-footer-h tab-view-footer-elements">
-      The Green Trees Initiative
+      The Green <br>
+      Trees Initiative
     </h3>
     <div class="column-flex tab-view-footer-elements">
       <div class="cfl">
-        <p class="fontStyle-headerfooter fontSize11px">CONTACT US</p>
+        <p class="fontStyle-headerfooter fontSize11px" id="contact-us">CONTACT US</p>
         <p class="fontStyle-headerfooter" id="contact-us-p">
           123 Anywhere st. <br>
           Cityname,NY 11206 <br>
@@ -341,8 +346,8 @@
           conact@npo.org
         </p>
       </div>
-      <div class="cfl">
-        <p class="fontStyle-headerfooter fontSize11px">LEARN MORE</p>
+      <div class="cfl" id="learn-more-section">
+        <p class="fontStyle-headerfooter fontSize11px" id="learn-more-footer">LEARN MORE</p>
         <a href="#" class="fontStyle-headerfooter">The issue</a>
         <a href="#" class="fontStyle-headerfooter">How we help</a>
         <a href="#" class="fontStyle-headerfooter">Get involved</a>
@@ -351,7 +356,7 @@
     </div>
     <div class="column-flex tab-view-footer-elements">
       <div class="cfl">
-        <p class="fontStyle-headerfooter fontSize11px">
+        <p class="fontStyle-headerfooter fontSize11px" id="follow-us">
           FOLLOW US
         </p>
         <a href="#" class="fontStyle-headerfooter">Facebook</a>
@@ -359,7 +364,7 @@
         <a href="#" class="fontStyle-headerfooter">Instagram</a>
         <a href="#" class="fontStyle-headerfooter">Medium</a>
       </div>
-      <h2 class="hashtag1" id="footer-hashtag">
+      <h2 class="hashtag-blue hashtag-mobile-tab" id="footer-hashtag">
         # STOP CLIMATE CHANGE
       </h2>
     </div>
@@ -369,7 +374,7 @@
     <h3 class="header-footer-h tab-view-footer-elements desktop-view-footer-element" id="desktop-view-footer-h">
       The Green Trees Initiative
     </h3>
-    <div class="cfl desktop-view-footer-element">
+    <div class="cfl desktop-view-footer-element" id="contact-us">
       <p class="fontStyle-headerfooter fontSize11px cfl-h">CONTACT US</p>
       <p class="fontStyle-headerfooter" id="contact-us-p">
         123 Anywhere st. <br>
@@ -378,14 +383,14 @@
         conact@npo.org
       </p>
     </div>
-    <div class="cfl desktop-view-footer-element">
+    <div class="cfl desktop-view-footer-element" id="links">
       <p class="fontStyle-headerfooter fontSize11px cfl-h">LINKS</p>
       <a href="#" class="fontStyle-headerfooter">The issue</a>
       <a href="#" class="fontStyle-headerfooter">How we help</a>
       <a href="#" class="fontStyle-headerfooter">Get involved</a>
       <a href="#" class="fontStyle-headerfooter">Latest news</a>
     </div>
-    <div class="cfl desktop-view-footer-element">
+    <div class="cfl desktop-view-footer-element" id="follow-us">
       <p class="fontStyle-headerfooter fontSize11px cfl-h">
         FOLLOW US
       </p>
@@ -394,7 +399,7 @@
       <a href="#" class="fontStyle-headerfooter">Instagram</a>
       <a href="#" class="fontStyle-headerfooter">Medium</a>
     </div>
-    <h2 class="hashtag1 desktop-view-footer-element" id="footer-hashtag">
+    <h2 class="hashtag-blue desktop-view-footer-element" id="footer-hashtag">
       # STOP CLIMATE CHANGE
     </h2>
   </footer>
